--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,10 +150,14 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('keystore.keystore')
+            storePassword 'jls159'
+            keyAlias 'com.jogorapido'
+            keyPassword 'jls159'
+            // storeFile file('debug.keystore')
+            // storePassword 'android'
+            // keyAlias 'androiddebugkey'
+            // keyPassword 'android'
         }
         release {
             if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
@@ -167,6 +171,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.debug
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -204,9 +209,14 @@ dependencies {
     // implementation "com.google.android.gms:play-services-gcm:12.+"
     implementation "com.google.android.gms:play-services-base:16.1.0"
     implementation "com.google.firebase:firebase-core:16.0.9"
-    
     implementation "com.google.firebase:firebase-messaging:18.0.0"
     implementation "me.leolin:ShortcutBadger:1.1.21@aar"
+
+    // implementation "com.google.android.gms:play-services-base:17.0.0"
+	// implementation "com.google.firebase:firebase-core:17.0.1"
+	// implementation "com.google.firebase:firebase-messaging:19.0.0"
+	// implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
+
     // Fim firebase
 
     // Inicio react-navigation
