Biblioteca de som configurada

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
     "react-native-shared-element": "^0.5.5",
+    "react-native-sound": "^0.11.0",
     "react-native-webview": "^8.0.6",
     "react-navigation": "^4.1.0",
     "react-navigation-animated-switch": "^0.4.1",
