Correção de som na versão release

--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       "#DEDEDE"
     ],
     "08": "#7530C8",
-    "19": "rgba(119, 47, 195, .9)",
+    "19": "rgba(103,79,222, .9)",
     "14": [
       "#772FC3",
       "#40BEFF"
@@ -48,6 +48,11 @@
     "09": "#E40500",
     "12": "#EC5F23",
     "10": "#40D100",
+    "24":[
+      "#6763DE",
+      "#6C63FF"
+    ],
+    "25":"rgba(215,250,250,.2)",
     "17": [
       "#15D11D",
       "#0B690F"
