--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,10 +135,10 @@ android {
         applicationId "com.jogorapido"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        resConfigs "en", "pt"
+        // resConfigs "en", "pt"
         multiDexEnabled true
-        versionCode 101
-        versionName "1.0.1"
+        versionCode 102
+        versionName "1.0.2"
     }
     splits {
         abi {
