--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <!-- INICIO PERMISSOES PADRAO.-->
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    
     <!-- INICIO PERMISSOES PARA MAPAS E CAMERA.-->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
