--- a/app.json
+++ b/app.json
@@ -21,14 +21,8 @@
       "#DEDEDE"
     ],
     "08": "#7530C8",
-    "19": "rgba(103,79,222, .9)",
+    "19": "rgba(116, 48, 200, .9)",
     "14": [
-      "#772FC3",
-      "#40BEFF"
-    ],
-    "21": [
-      "#F03800",
-      "#E68523",
       "#772FC3",
       "#40BEFF"
     ],
@@ -89,8 +83,8 @@
     "ios": "PingFangHK-Thin",
     "android": "sans-serif-thin"
   },
-  "timeoutSlow": 3000,
-  "timeoutLong": 20000,
+  "timeoutSlow": 10000,
+  "timeoutLong": 50000,
   "usuario": "",
   "senha": ""
 }
