--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   package="com.jogorapido">
     <!-- INICIO GEOFENCE.-->
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -26,11 +27,13 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <!-- FIM PERMISSOES EXTRAS -->
 
     <!-- INICIO CAMERA -->
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.flash" android:required="false" />
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <!-- FIM CAMERA -->
@@ -38,7 +41,7 @@
     <!-- INICIO MAPA
     <uses-permission android:name="com.gotrainer.permission.MAPS_RECEIVE"/>
     <permission android:name="com.gotrainer.permission.MAPS_RECEIVE" android:protectionLevel="signature"/>
-    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
+    
     FIM MAPA -->
 
     <application
@@ -52,36 +55,48 @@
       <!-- INICIO GEOFENCE-->
       <meta-data android:name="com.transistorsoft.locationmanager.license" android:value="@string/licenseGeofence" />
       <!--FIM GEOFENCE -->
-      <!-- INICIO MAPA
-      <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="@string/maps_key"/>
-      FIM MAPA -->
-      <!-- INICIO LOGIN FACEBOOK
-      <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
-      FIM LOGIN FACEBOOK -->
-      <!-- INICIO FIREBASE MESSAGING -->
       <meta-data
         android:name="com.google.firebase.messaging.default_notification_icon"
         android:resource="@drawable/notifier"
       />
       <meta-data
-        android:name="com.google.firebase.messaging.default_notification_channel_id"
-        android:value="@string/default_notification_channel_id"
-      />
-      <meta-data
         android:name="com.google.firebase.messaging.default_notification_color"
-        android:resource="@color/colorNotifier"
+        android:resource="@color/colorAccent"
       />
+
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
       <service android:name="io.invertase.firebase.messaging.RNFirebaseMessagingService">
         <intent-filter>
           <action android:name="com.google.firebase.MESSAGING_EVENT" />
         </intent-filter>
       </service>
+      <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
+      <meta-data
+        android:name="com.facebook.sdk.ApplicationId"
+        android:value="@string/facebook_app_id"
+      />
+      <activity
+        android:name="com.facebook.FacebookActivity"
+        android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        android:label="@string/app_name"
+      />
+      <activity
+        android:name="com.facebook.CustomTabActivity"
+        android:exported="true"
+      >
+        <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+          <data android:scheme="@string/fb_login_protocol_scheme" />
+        </intent-filter>
+      </activity>
+
       <service android:name="io.invertase.firebase.messaging.RNFirebaseInstanceIdService">
         <intent-filter>
           <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
         </intent-filter>
       </service>
-      <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
       <receiver android:name="io.invertase.firebase.notifications.RNFirebaseNotificationReceiver"/>
       
       <receiver android:enabled="true" android:exported="true"  android:name="io.invertase.firebase.notifications.RNFirebaseNotificationsRebootReceiver">
@@ -92,14 +107,15 @@
           <category android:name="android.intent.category.DEFAULT" />
         </intent-filter>
       </receiver>
-      <!-- FIM FIREBASE MESSAGING -->
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
-        android:launchMode="singleTop"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+        android:windowSoftInputMode="adjustResize"
         android:screenOrientation="portrait"
-        android:windowSoftInputMode="adjustResize">
+        android:launchMode="singleTop"
+      >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
