--- a/ios/Podfile
+++ b/ios/Podfile
@@ -54,7 +54,8 @@ target 'jogorapido' do
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
   
   
-  # pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
   pod 'react-native-geolocation', path: '../node_modules/@react-native-community/geolocation'
   
   pod 'Permission-Camera', :path => "../node_modules/react-native-permissions/ios/Camera.podspec"
