--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "url-search-params": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
