--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
     
     <!-- INICIO PERMISSOES EXTRAS -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <!-- FIM PERMISSOES EXTRAS -->
@@ -45,12 +45,13 @@
     FIM MAPA -->
 
     <application
+      android:networkSecurityConfig="@xml/network_security_config"
+      android:usesCleartextTraffic="true"
+      android:allowBackup="false"
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/icone"
       android:roundIcon="@mipmap/icone_round"
-      android:allowBackup="false"
-      android:usesCleartextTraffic="true"
       android:theme="@style/AppTheme">
       <!-- INICIO GEOFENCE-->
       <meta-data android:name="com.transistorsoft.locationmanager.license" android:value="@string/licenseGeofence" />
