--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jogorapido",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -40,7 +40,9 @@
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
     "react-native-shared-element": "^0.5.5",
+    "react-native-shimmer-placeholder": "^1.0.35",
     "react-native-sound": "^0.11.0",
+    "react-native-tab-view": "^2.13.0",
     "react-native-webview": "^8.0.6",
     "react-navigation": "^4.1.0",
     "react-navigation-animated-switch": "^0.4.1",
@@ -62,7 +64,7 @@
     "babel-jest": "24.9.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "6.8.0",
-    "jest": "24.9.0",
+    "jest": "^25.1.0",
     "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "0.56.4",
     "react-native-debugger-open": "^0.3.24",
