--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,7 +191,6 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
-            // signingConfig signingConfigs.debug
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -254,4 +253,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 apply plugin: 'com.google.gms.google-services'
+// com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
+googleServices {disableVersionCheck = true}
