--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-background-fetch": "^2.7.1",
     "react-native-background-geolocation": "^3.4.2",
+    "react-native-code-push": "^6.1.1",
     "react-native-date-picker": "^2.7.5",
     "react-native-firebase": "^5.6.0",
     "react-native-geolocation-service": "^3.1.0",
