--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,12 +136,12 @@ def getVersionName() {
 def getVersionCode() {
     def (major, minor, patch) = getVersionName().tokenize('.');
     def r = major + minor.padLeft(3, "0") + patch.padLeft(4, "0");
-    System.out.println("VERSION CODE");
-    System.out.println(r);
+    // System.out.println("VERSION CODE");
+    // System.out.println(r);
     return Integer.parseInt(r);
 }
-def vName = getVersionName()
-def vCode = getVersionCode()
+// def vName = getVersionName()
+// def vCode = getVersionCode()
 // Fim de funcões de atualização de nome e código de versão;
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -157,8 +157,10 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         // resConfigs "en", "pt"
         multiDexEnabled true
-        versionCode vCode
-        versionName vName
+        // versionCode vCode
+        // versionName vName
+        versionCode "1.1.7"
+        versionName 10010007
     }
     splits {
         abi {
