--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "6.8.0",
     "jest": "^25.1.0",
     "jetifier": "^1.6.5",
