--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.6",
+    "@sentry/react-native": "^1.3.6",
     "abortcontroller-polyfill": "^1.4.0",
     "base-64": "^0.1.0",
     "moment": "^2.24.0",
