--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-native-animatable": "^1.3.3",
     "react-native-background-fetch": "^2.7.1",
     "react-native-background-geolocation": "^3.4.2",
+    "react-native-camera-kit": "^8.0.4",
     "react-native-code-push": "^6.1.1",
     "react-native-date-picker": "^2.7.5",
     "react-native-fbsdk": "^1.1.2",
     "react-native-firebase": "^5.6.0",
     "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-image-resizer": "^1.2.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-open-map": "^3.0.2",
     "react-native-permissions": "^2.0.9",
