Correção no warp da galeria de imagens

--- a/app.json
+++ b/app.json
@@ -5,8 +5,8 @@
   "googleplayid": "com.jogorapido",
   "facebookID": "?",
   "baseUrl": {
-    "on":"https://jogorapido.delivery/app/",
-    "off":"https://jogorapido.delivery/app/"
+    "on":"https://beta.jogorapido.delivery/app/",
+    "off":"https://beta.jogorapido.delivery/app/"
   },
   "baseUrlNode":{
     "on": "https://jogorapido.delivery:22600/",
