Correção em link de navegação Push (Erro capturado pelo log)

--- a/app.json
+++ b/app.json
@@ -3,8 +3,8 @@
   "displayName": "JogoRápido",
   "googleplayid": "com.jogorapido",
   "baseUrl": {
-    "on":"https://jogorapido.delivery/app/",
-    "off":"https://jogorapido.delivery/app/"
+    "on":"https://beta.jogorapido.delivery/app/",
+    "off":"https://beta.jogorapido.delivery/app/"
   },
   "baseUrlNode":{
     "on": "https://jogorapido.delivery:22600/",
