--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -159,14 +159,14 @@ android {
         multiDexEnabled true
         // versionCode vCode
         // versionName vName
-        versionCode 20010002
-        versionName "2.1.2"
+        versionCode 20010004
+        versionName "2.1.4"
     }
     splits {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk true  // If true, also generate a universal APK
+            universalApk false  // If true, also generate a universal APK
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
