Correção em ações de background para recepção de notificações

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -231,6 +231,11 @@ dependencies {
     implementation "com.google.firebase:firebase-core:16.0.9"
     implementation "com.google.firebase:firebase-messaging:18.0.0"
     implementation "me.leolin:ShortcutBadger:1.1.21@aar"
+
+    implementation(project(':react-native-geolocation-service')) {
+        exclude group: 'com.google.android.gms', module: 'play-services-location'
+    }
+    implementation 'com.google.android.gms:play-services-location:16.1.0'
     // Fim firebase
 
     // Inicio react-navigation
