--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         // androidXBrowser = "1.0.0" // add no lugar de supportLibVersion
         playServicesVersion = "16.+"
         androidMapsUtilsVersion = "0.5+"
+        googlePlayServicesVersion = "16.0.0"
         appCompatVersion = "1.0.2"
     }
     repositories {
