--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jogorapido",
-  "version": "2.1.5",
+  "version": "2.1.6",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -20,6 +20,9 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@sentry/react-native": "^1.3.6",
     "abortcontroller-polyfill": "^1.4.0",
+    "appcenter": "3.0.1",
+    "appcenter-analytics": "3.0.1",
+    "appcenter-crashes": "3.0.1",
     "base-64": "^0.1.0",
     "moment": "^2.24.0",
     "pad": "^3.2.0",
