--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -232,9 +232,9 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging:18.0.0"
     implementation "me.leolin:ShortcutBadger:1.1.21@aar"
 
-    implementation(project(':react-native-geolocation-service')) {
-        exclude group: 'com.google.android.gms', module: 'play-services-location'
-    }
+    // implementation(project(':react-native-geolocation-service')) {
+    //     exclude group: 'com.google.android.gms', module: 'play-services-location'
+    // }
     implementation 'com.google.android.gms:play-services-location:16.1.0'
     // Fim firebase
 
