--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "jetifier -r && rndebugger-open",
-    "rndebugger": "rndebugger-open",
+    "postinstall": "jetifier -r",
     "android-release": "react-native run-android --variant=release",
-    "debugger": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'",
     "logcat": "(cd ./android && adb logcat *:S ReactNative:V ReactNativeJS:V)"
   },
   "dependencies": {
@@ -24,6 +22,7 @@
     "appcenter-analytics": "3.0.1",
     "appcenter-crashes": "3.0.1",
     "base-64": "^0.1.0",
+    "css-to-react-native": "^3.0.0",
     "moment": "^2.24.0",
     "pad": "^3.2.0",
     "react": "16.9.0",
@@ -64,7 +63,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^5.1.0",
     "url-search-params": "^1.1.0"
   },
   "devDependencies": {
