--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "react-native-screens": "^2.0.0-alpha.32",
     "react-native-shared-element": "^0.5.5",
     "react-native-shimmer-placeholder": "^1.0.35",
+    "react-native-silent-switch": "^0.1.0",
     "react-native-sound": "^0.11.0",
+    "react-native-system-setting": "^1.7.4",
     "react-native-tab-view": "^2.13.0",
     "react-native-webview": "^8.0.6",
     "react-navigation": "^4.1.0",
