--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "appcenter": "3.0.1",
     "appcenter-analytics": "3.0.1",
     "appcenter-crashes": "3.0.1",
+    "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "css-to-react-native": "^3.0.0",
     "intl": "^1.2.5",
