Ultimo backup antes do upgrade

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "files.exclude": {
         "android/app/build": true,
-        "android/build": true,
-        "android/gradle": true,
-        "node_modules": true
+        "android/build": true
+    },
+    "files.watcherExclude": {
+        "**/node_modules/**": false
     }
 }
