--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,18 +2,10 @@
 
 buildscript {
     ext {
-        googlePlayServicesLocationVersion = "17.0.0"
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 21
         compileSdkVersion = 28
         targetSdkVersion = 28
-        supportLibVersion = "28.0.0"
-        // androidXAnnotation = "1.1.0"// add no lugar de supportLibVersion
-        // androidXBrowser = "1.0.0" // add no lugar de supportLibVersion
-        playServicesVersion = "16.+"
-        androidMapsUtilsVersion = "0.5+"
-        googlePlayServicesVersion = "16.0.0"
-        appCompatVersion = "1.0.2"
     }
     repositories {
         google()
@@ -22,19 +14,15 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
-        // classpath('com.google.gms:google-services:4.2.0')
         classpath('com.google.gms:google-services:4.3.3')
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
-
 allprojects {
     repositories {
         mavenLocal()
         google()
         jcenter()
+
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -43,15 +31,15 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-        // bluetooth start
+
         maven {
-            url "https://dl.bintray.com/vivareal/maven"
+            url("https://dl.bintray.com/vivareal/maven")
         }
+
+        maven { url 'https://jitpack.io' }
+
         flatDir {
             dirs "$rootDir/../node_modules/react-native-mpos-native/android/libs"
         }
-        // bluetooth end
-
-        maven { url 'https://jitpack.io' }
     }
 }
