--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -7,18 +7,18 @@
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
+# Especifica os argumentos da JVM usados para o processo daemon.
+# A configuração é particularmente útil para ajustar as configurações de memória.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
+# Quando configurado, o Gradle será executado no modo paralelo de incubação.
+# Esta opção deve ser usada apenas com projetos dissociados. Mais detalhes, visite
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
 
-
+# android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
 MYAPP_UPLOAD_STORE_FILE=keystore.keystore
