--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "deploy": "react-native run-android --variant=release",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "jetifier -r",
-    "android-release": "react-native run-android --variant=release",
-    "logcat": "(cd ./android && adb logcat *:S ReactNative:V ReactNativeJS:V)"
+    "cleargradle": "cd android && ./gradlew clean",
+    "startgradle": "cd android && ./gradlew bundleRelease",
+    "clear": "yarn cache clean --force",
+    "reset": "yarn start --reset-cache",
+    "postinstall": "jetifier -r && patch-package"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
@@ -18,14 +21,13 @@
     "@react-native-community/masked-view": "^0.1.6",
     "abortcontroller-polyfill": "^1.4.0",
     "appcenter": "3.0.1",
-    "appcenter-analytics": "3.0.1",
-    "appcenter-crashes": "3.0.1",
-    "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "css-to-react-native": "^3.0.0",
     "intl": "^1.2.5",
+    "jetifier": "^1.6.5",
     "moment": "^2.24.0",
     "pad": "^3.2.0",
+    "patch-package": "^6.2.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
@@ -40,7 +42,7 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-resizer": "^1.2.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-mpos-native": "^3.1.0",
+    "react-native-mpos-native": "3.2.0",
     "react-native-open-map": "^3.0.2",
     "react-native-permissions": "^2.0.9",
     "react-native-reanimated": "^1.7.0",
@@ -49,17 +51,15 @@
     "react-native-rsa-native": "^1.1.4",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
-    "react-native-shared-element": "^0.5.5",
+    "react-native-shared-element": "^0.7.0",
     "react-native-shimmer-placeholder": "^1.0.35",
     "react-native-sound": "^0.11.0",
     "react-native-system-setting": "^1.7.4",
-    "react-native-tab-view": "^2.13.0",
     "react-native-webview": "^8.0.6",
     "react-navigation": "^4.1.0",
     "react-navigation-animated-switch": "^0.4.1",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-hooks": "^1.1.0",
-    "react-navigation-shared-element": "^1.0.0",
+    "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.0.16",
     "react-navigation-tabs": "^2.7.0",
     "react-navigation-transitions": "^1.0.12",
@@ -78,7 +78,6 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "6.8.0",
     "jest": "^25.1.0",
-    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "0.56.4",
     "react-native-debugger-open": "^0.3.24",
     "react-test-renderer": "16.9.0"
