--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,7 +17,7 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-
+FLIPPER_VERSION=0.33.1
 # android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
