Atualização do min sdk para 19

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,7 +18,7 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # org.gradle.parallel=true
 
 FLIPPER_VERSION=0.33.1
-# android.enableR8=true
+# android.enableR8=false
 android.useAndroidX=true
 android.enableJetifier=true
 MYAPP_UPLOAD_STORE_FILE=keystore.keystore
