--- a/package.json
+++ b/package.json
@@ -9,33 +9,31 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "cleargradle": "cd android && ./gradlew clean",
-    "startgradle": "cd android && ./gradlew bundleRelease",
+    "gradle": "cd android && ./gradlew clean && ./gradlew bundleRelease",
     "clear": "yarn cache clean --force",
     "reset": "yarn start --reset-cache",
-    "postinstall": "jetifier -r && patch-package"
+    "postinstall": "jetifier -r"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
-    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/masked-view": "^0.1.10",
     "abortcontroller-polyfill": "^1.4.0",
-    "appcenter": "3.0.1",
+    "appcenter": "^3.0.3",
     "base-64": "^0.1.0",
     "css-to-react-native": "^3.0.0",
     "intl": "^1.2.5",
     "jetifier": "^1.6.5",
     "moment": "^2.24.0",
     "pad": "^3.2.0",
-    "patch-package": "^6.2.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
-    "react-native-background-fetch": "^2.7.1",
+    "react-native-background-fetch": "^3.0.6",
     "react-native-background-geolocation": "^3.7.0",
     "react-native-camera-kit": "^8.0.4",
     "react-native-code-push": "^6.2.1",
-    "react-native-date-picker": "^2.7.5",
+    "react-native-date-picker": "^2.7.10",
     "react-native-fbsdk": "^1.1.2",
     "react-native-firebase": "^5.6.0",
     "react-native-geolocation-service": "^3.1.0",
