--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-navigation": "^4.1.0",
     "react-navigation-animated-switch": "^0.4.1",
     "react-navigation-drawer": "^2.3.3",
+    "react-navigation-hooks": "^1.1.0",
     "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.0.16",
     "react-navigation-tabs": "^2.7.0",
