Atualização de correções

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,14 +157,14 @@ android {
         multiDexEnabled true
         // versionCode vCode
         // versionName vName
-        versionCode 20020005
-        versionName "2.2.5"
+        versionCode 20020008
+        versionName "2.2.8"
     }
     splits {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk true  // If true, also generate a universal APK
+            universalApk false  // If true, also generate a universal APK
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
