--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jogorapido",
-  "version": "2.2.5",
+  "version": "2.2.8",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -20,6 +20,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "abortcontroller-polyfill": "^1.4.0",
     "appcenter": "^3.0.3",
+    "babel-preset-react-app": "^9.1.2",
     "base-64": "^0.1.0",
     "css-to-react-native": "^3.0.0",
     "intl": "^1.2.5",
